<resources>
    <string name="app_name">Registro de Celulares</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="agregar">Agregar Datos del Celular</string>
    <string name="marca">Marca</string>
    <string name="modelo">Modelo</string>
    <string name="imei">Imei</string>
    <string name="memoria">Memoria (Gb)</string>
    <string name="ram">Ram (Gb)</string>
    <string name="guardar">Guardar</string>
    <string name="limpiar">Limpiar</string>
    <string name="detallecelular">Detalle del Equipo</string>
    <string name="mensajeGuardarC">Equipo Guardado correctamente</string>
    <string name="detalleTitulo">Detalle del Equipo</string>
    <string name="etiqueta_boton_eliminar">Eliminar</string>
    <string name="eliminar_equipo">Eliminar Equipo</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="seguro_eliminar">¿Estas seguro de eliminar el equipo?</string>
    <string name="error_marca">Escriba la marca</string>
    <string name="error_modelo">Esciba el modelo</string>
    <string name="error_imei">Escriba los 15 digitos del IMEI</string>
    <string name="error_memoria">Escriba el tamaño de memoria</string>
    <string name="error_ram">Escriba el tamaño de RAM</string>
    <string name="error_digitos_imei">Deben ser 15 caracteres</string>
    <string name="informacion_titutlo">Información Correcta</string>
    <string name="informacion_correcta">¿La información es Corercta?</string>
    <string name="entrar">Iniciar</string>
    <string name="celularesRegistrados">Celulares Registrados</string>
</resources>
