<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetalleCelular">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:clickable="true"
        app:srcCompat="@android:drawable/ic_menu_delete" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lblTituloDetalle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/detallecelular"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imgFotoDetalle"
            android:layout_width="match_parent"
            android:layout_height="166dp"
            app:srcCompat="@drawable/sony" />

        <TableLayout
            android:id="@+id/tblTablaDetalle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*">

            <TableRow
                android:id="@+id/filaMarca"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/lblMarcaTitulo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/marca"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/lblMarcaDetalle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow
                android:id="@+id/filaModelo"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/lblModeloTitulo"
                    android:layout_width="123dp"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:text="@string/modelo"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/lblModeloDetalle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow
                android:id="@+id/filaImei"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/lblImeiTitulo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/imei"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/lblImeiDetalle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow
                android:id="@+id/filaMemoria"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/lblMemoriaTitutlo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/memoria"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/lblMemoriaDetalle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textSize="18sp" />

            </TableRow>

            <TableRow
                android:id="@+id/filaRam"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/lblRamTitulo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/ram"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/lblRamDetalle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textSize="18sp" />
            </TableRow>
        </TableLayout>

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>